# acp-infra

./: .env.example  .gitignore  ARCHITECTURE_SUMMARY.md  CONTRIBUTION_HELPER.md  DEPLOY.md  Procfile  README.md  docker-compose.yml  fix_prices.py  nixpacks.toml  pyproject.toml  railway.toml  setup.sh  test_acp_sandbox.sh
.github/workflows/: deploy-railway.yml  test-only.yml
acp_framework/: __init__.py  agent.py  models.py  payment.py  seller.py
deployment/railway/: .env.railway.example  README.md  railway.agent.json  railway.psp.json  railway.seller.json  railway.ui.json  railway.unified.template.yaml  railway.worker.json  start-agent.sh  start-psp.sh  start-seller.sh  start-worker.sh
docs/: architecture.md
examples/: README.md  simple_merchant.py
services/: __init__.py
services/agent/: commerce_agent.py  main.py
services/pipeline/: activities.py  sources.py  worker.py  workflows.py
services/psp/: __init__.py  main.py
services/seller/: database.py  main.py  search.py
tests/: test_acp_contracts.py
ui/: next.config.js  package-lock.json  package.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/api/chat/: route.ts
ui/src/app/api/seller/checkout_sessions/[id]/: route.ts
