[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acp-framework"
version = "0.1.0"
description = "Agentic Commerce Protocol (ACP) framework — connect any merchant to AI agents for programmatic checkout"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Shabaz Patel", email = "shabaz@example.com" }
]
keywords = ["acp", "commerce", "ai", "agents", "checkout", "payments", "agentic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai-agents>=0.0.10",
    "mem0ai>=0.1.0",
    "temporalio>=1.7.0",
    "stripe>=10.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.13.0",
]

[project.urls]
Homepage = "https://github.com/shabazpatel/acp-infra"
Documentation = "https://github.com/shabazpatel/acp-infra/blob/main/CONTRIBUTION_HELPER.md"
Repository = "https://github.com/shabazpatel/acp-infra"
Issues = "https://github.com/shabazpatel/acp-infra/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["acp_framework"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
